import "CommonChannel.proto";
import "Common.proto";
package com.mi.liveassistant.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "HotChannelProto";

/*****************zhibo.recommend.list*************************/
message GetRecommendListReq{
    required uint64 uid         = 1; //用户id
    optional uint32 channelId   = 2; //频道id
}

message GetRecommendListRsp {
    required uint32 ret_code    = 1;
    repeated ChannelItem items  = 2;
}

//更多的跳转schema(wallilive://recommend/sublist?id=1&title=encode(达人))，会带上subListId，
//********************zhibo.recommend.sublist**************************************/
message GetRecommendSublistReq {
    required uint64 uid         =1;
    required uint32 subListId   =2;
    optional uint32 channelId   =3;
    optional string key         =4;//如果schema没有key，则不传
    optional uint64 keyId       =5;//如何shema没有keyId，则不传
    optional uint32 source      =6;//二级列表基础数据来源[客户端不用关心,需要透传给服务器]
    optional Location location = 7;
    optional uint32 gender         = 8;  //性别刷选 , 默认0 全部,1 男,2 女
}

message GetRecommendSublistRsp {
    required uint32 ret_code    = 1;
    repeated ChannelItem items  = 2;
}

//********************zhibo.recommend.gameSublist**************************************/
message GetGameSublistReq {
    required uint64 uid         = 1;
    required uint32 channelId   = 2;
    required uint32 subListId   = 3;
    optional uint32 source      = 4; //二级列表基础数据来源[客户端不用关心,需要透传给服务器]
}

message GetGameSublistRsp {
    required uint32 retCode     = 1;
    repeated TabPage pages      = 2;
    optional GameInfo game      = 3;
}

message TabPage {
    optional string name        = 1;
    repeated ChannelItem items  = 2;
}

message GameInfo {
    optional string name            = 1; //游戏名称
    optional string bgImgUrl        = 2; //背景图片
    optional string iconUrl         = 3; //游戏图标
    optional string jumpSchemeUri   = 4; //跳转scheme
    optional string desc            = 5; //游戏描述
    optional uint32 grade           = 6; //评分，数值[1-10]对应[0.5星-5星]
}
